Update 'slzn86csc-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:e9394789c920b997d71a3184af6a096c9f477c70@sha256:3298404556835328290adaacd4cebab4c8ec0ebed3b69e0b1b34e89a08a0c5c1

--- a/components/slzn86csc-go/overlays/development/deployment-patch.yaml
+++ b/components/slzn86csc-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: slzn86csc-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:e9394789c920b997d71a3184af6a096c9f477c70@sha256:3298404556835328290adaacd4cebab4c8ec0ebed3b69e0b1b34e89a08a0c5c1
+          name: container-image
